--- a/package.json
+++ b/package.json
@@ -4,24 +4,27 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@redux-devtools/extension": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
     "lodash": "^4.17.21",
     "my-app": "file:",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
-    "redux": "^5.0.1",
+    "redux": "^4.0.2",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0",
+    "redux-thunk": "^2.4.1",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.80.3",
     "slick-carousel": "^1.8.1",
