--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.3",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "redux": "^4.0.2",
