--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
     "lodash": "^4.17.21",
+    "markdown-it": "^14.1.0",
     "my-app": "file:",
+    "punycode": "^2.3.1",
+    "punycode.js": "^2.3.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
@@ -29,6 +33,7 @@
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.80.3",
     "slick-carousel": "^1.8.1",
+    "uc.micro": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
