--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
+    "react-image-lightbox": "^5.1.4",
     "react-markdown-editor-lite": "^1.3.4",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
